# secops-wrapper

./: .coverage  .gitignore  CHANGELOG.md  CLI.md  CONTRIBUTING.md  README.md  TESTING.md  api_module_mapping.md  colab.ipynb  dummy.py  dummy_file2.py  example.py  pyproject.toml  regions.md  test.py
.gemini/: styleguide.yaml
.github/: CODEOWNERS
.github/workflows/: CODEOWNERS  allow_integration.yml  approve_integration_tests.yml  gemini-dispatch.yml  gemini-review.yml  integration_test.yml  integration_test_check.yml  lint.yml  publish-pypi.yml  publish_pypi.yml  test.yml  trigger_integration_tests.yml
examples/: dashboard_example.py  data_tables_and_reference_lists.py  example.py  example_rule.py  feed_management.py  find_udm_field_values_example.py  rule_exclusions_example.py
src/google_secops/: __init__.py  auth.py  client.py  exceptions.py
src/google_secops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/secops/: __init__.py  auth.py  cli.py  client.py  exceptions.py
tests/: __init__.py  config.py  conftest.py  test_auth.py  test_auth_retry.py
tests/chronicle/: __init__.py  test_client.py  test_dashboard.py  test_dashboard_integration.py  test_dashboard_query.py  test_dashboard_query_integration.py  test_data_tables.py  test_feed.py  test_feed_integration.py  test_integration.py  test_log_ingest.py  test_log_ingest_integration.py  test_log_ingest_splitter.py  test_parser.py  test_parser_extension.py  test_parser_extension_integration.py  test_rule.py  test_rule_deployment.py  test_rule_exclusion.py  test_rule_exclusion_integration.py  (+1 more)
(+29 files in other folders)
